usability fix: fix font size scaling on small screens

--- a/src/app.css
+++ b/src/app.css
@@ -233,3 +233,9 @@ spell svg {
 #dialog.hide {
   opacity: 0;
 }
+
+@media (max-width: 900px) {
+  #ui {
+    font-size: 1.7vw;
+  }
+}
